# samp-plugin-jit

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .gittrees  .travis.yml  CHANGES.txt  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  README.txt  TODO.txt  VERSION.txt  amxname.cpp  amxname.h  amxplugin.cpp  appveyor.yml  configreader.cpp  configreader.h  jit-plugin.cpp  jit-plugin.rc  jit.cpp  jit.h  jitasm.h  jitter.cpp  jitter.h  jump-x86.cpp  jump-x86.h  opcodes.h  pawn.json  plugin.cpp  plugin.h  plugin.rc  port.h  utils.cpp  utils.h
AsmJit/: CHANGELOG.txt  CMakeLists.txt
AsmJit/AsmJit/: ApiEnd.h  Assembler.h  AssemblerX86X64.h  Compiler.h  CpuInfo.cpp  Defs.h  DefsX86X64.cpp  DefsX86X64.h  Logger.cpp  MemoryMarker.h  OperandX86X64.cpp  OperandX86X64.h  Util.h
AsmJit/Documentation/: Doxygen.conf
AsmJit/Test/: testfuncalign.cpp  testfuncmanyargs.cpp  testfuncret.cpp  testmem1.cpp  testspecial2.cpp  testvar2.cpp  testvar3.cpp
AsmJit/Util/: configure-borland-dbg.bat  configure-unix-makefiles-rel.sh  configure-windows-mingw-dbg.bat  configure-windows-mingw-rel.bat  configure-windows-msvc6.bat  configure-windows-vs2005-x64.bat  configure-windows-vs2008-x86.bat  configure-windows-vs2010-x86.bat
jit/: CMakeLists.txt  SupportedOpcodes.txt  amxdisasm.h  amxopcode.cpp  amxopcode.h  amxptr.cpp  amxptr.h  backend-asmjit.h  compiler.cpp  jit.cpp  jit.h  macros.h
jit/asmjit/: README.txt
jit/asmjit/AsmJit/: AsmJit.h
jit/asmjit/Test/: TestMem.cpp
jit/asmjit/Util/: configure-borland-rel.bat  configure-windows-vs2010-x64.bat
jit/asmjit/scripts/: configure-win-vs2008-x64.bat
lib/: CMakeLists.txt
lib/asmjit/: CMakeLists.txt  cmake-self-setup.patch  log-formatting.patch  static-lib.patch
lib/asmjit/Test/: TestX86.cpp  testdummy.cpp
lib/asmjit/Util/: configure-windows-vs2005-x86.bat  configure-windows-vs2008-x64.bat
lib/asmjit/scripts/: configure-mac-xcode.sh  configure-unix-makefiles-dbg.sh  configure-unix-makefiles-rel.sh  configure-win-borland-rel.bat  configure-win-mingw-dbg.bat  configure-win-vs2005-x64.bat  configure-win-vs2005-x86.bat  configure-win-vs2008-x86.bat  configure-win-vs2010-x64.bat
lib/subhook/: subhook.h
plugin/: CMakeLists.txt  amxname.cpp  amxname.h  amxpathfinder.cpp  amxservice.h  configreader.cpp  configreader.h  jit.cpp  jit.h  jump-x86.cpp  jump-x86.h  options.cpp  options.h  os-unix.cpp  os-win32.cpp  os.h  plugin.cpp  version.h.in
plugin/SDK/: CMakeLists.txt
plugin/SDK/amx/: amx.h
plugin/amxjit/: CMakeLists.txt  amxdisasm.cpp  amxdisasm.h  amxopcode.cpp  amxopcode.h  amxptr.cpp  amxptr.h  callconv.h  compiler-asmjit.cpp  compiler-asmjit.h  compiler-llvm.cpp  compiler-llvm.h  compiler.cpp  compiler.h  cstdint.h  disasm.cpp  disasm.h  jit.cpp  jit.h  logger.cpp  logger.h  macros.h  opcode.cpp  opcode.h
plugin/jit/: CMakeLists.txt  amxdisasm.cpp  amxdisasm.h  amxopcode.cpp  amxopcode.h  amxptr.cpp  amxptr.h  asmjit-backend.cpp  backend-asmjit.cpp  backend-asmjit.h  backend.h  callconv.h  compiler-asmjit.cpp  compiler-asmjit.h  compiler.cpp  compiler.h  jit.cpp  jit.h  macros.h
plugin/jit/asmjit/: CMakeLists.txt  README.txt
plugin/sdk/: CMakeLists.txt
src/: CMakeLists.txt  amxhandler.h  amxjit.cpp  amxjit.h  amxpathfinder.cpp  amxpathfinder.h  amxservice.h  configreader.h  fileutils.cpp  fileutils.h  hook-unix.cpp  hook-win32.cpp  jit.cpp  jit.h  jit.rc.in  jit_sleep.cpp  jithandler.cpp  jithandler.h  options.cpp  options.h  os-unix.cpp  os-win32.cpp  os.h  plugin.cpp  plugin.rc.in  pluginversion.h.in  sleep.cpp  version.h.in
src/SDK/amx/: amx.h
src/amx/: amx.h
src/amxjit/: CMakeLists.txt  amxptr.cpp  amxptr.h  amxref.cpp  amxref.h  compiler-asmjit.cpp  compiler-asmjit.h  compiler-llvm.cpp  compiler-llvm.h  compiler.cpp  compiler.h  compiler_impl.cpp  compiler_impl.h  cstdint.h  disasm.cpp  disasm.h  logger.cpp  logger.h  macros.h  opcode.cpp  opcode.h  platform.cpp  platform.h
src/jit/: amxdisasm.cpp  amxdisasm.h  amxopcode.h  amxscript.cpp  amxscript.h  backend-asmjit.cpp  jit.cpp  jit.h
tests/: .gitignore  CMakeLists.txt  bug21.pwn  bug24.pwn  bug30.pwn  bug36.pwn  bug42.pwn  bug8.pwn  clamp1.pwn  clamp2.pwn  clamp3.pwn  clamp4.pwn  clamp5.pwn  float.pwn  float_extras.inc  floatabs.pwn  floatadd.pwn  floatcmp.pwn  floatdiv.pwn  floatfract.pwn  floatlog.pwn  floatmul.pwn  floatround.pwn  floatsin.pwn  floatsqroot.pwn  floatsub.pwn  frame_address.pwn  full_output.txt.in  halt.pwn  halt_deep.pwn  has_lctrl8.pwn  heapspace.pwn  indirect_jump.pwn  jrel.pwn  lctrl8.pwn  minmax.pwn  native_call.pwn  native_error.pwn  native_return_value.pwn  nested_exec.pwn  (+16 more)
tests/bugs/: bug21.out  bug24.out  bug24.pwn  bug30.amx  bug30.out  bug8.amx  bug8.out  bug8.pwn
tests/bugs/bug21/: output.txt  test.amx  test.pwn
tests/bugs/bug24/: output.txt  test.amx  test.pwn
tests/bugs/bug30/: output.txt  test.amx  test.pwn
tests/bugs/bug36/: output.txt  test.amx  test.pwn
tests/bugs/bug42/: test.amx
tests/bugs/bug8/: test.amx  test.pwn
tests/bugs/jrel/: output.txt  test.amx  test.pwn
tests/intrinsics/: constants.inc  float.amx  float.pwn  floatabs.amx  floatabs.pwn  floatadd.amx  floatadd.out.in  floatadd.pwn  floatdiv.amx  floatdiv.pwn  floatlog.amx  floatlog.pwn  floatmul.amx  floatmul.pwn  floatsqroot.amx  floatsqroot.pwn  floatsub.amx  floatsub.pwn
tests/intrinsics/VectorSize/: output.txt  test.amx  test.pwn
tests/intrinsics/float/: output.txt  test.amx  test.pwn
tests/intrinsics/floatabs/: test.amx  test.pwn
tests/intrinsics/floatadd/: output.txt  test.amx  test.pwn
tests/intrinsics/floatdiv/: output.txt  test.amx  test.pwn
tests/intrinsics/floatlog/: output.txt  test.amx  test.pwn
tests/intrinsics/floatmul/: output.txt  test.amx  test.pwn
tests/intrinsics/floatsqroot/: output.txt  test.amx  test.pwn
tests/intrinsics/floatsub/: output.txt  test.amx  test.pwn
tests/misc/frame_address/: test.amx  test.pwn
tests/misc/halt/: output.txt  test.amx  test.pwn
tests/misc/halt_deep/: output.txt  test.amx  test.pwn
tests/misc/indirect_jump/: test.amx  test.pwn
tests/misc/ojc/: test.amx  (+1 more)
(+259 files in other folders)
