cmake_minimum_required(VERSION 2.8)

set(ASMJIT_STATIC TRUE)
list(APPEND COMPILE_DEFS "ASMJIT_API=")
list(APPEND INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/asmjit/src")
add_subdirectory("asmjit")

set_property(DIRECTORY "${CMAKE_SOURCE_DIR}" APPEND PROPERTY INCLUDE_DIRECTORIES ${INCLUDE_DIRS}) 
set_property(DIRECTORY "${CMAKE_SOURCE_DIR}" APPEND PROPERTY COMPILE_DEFINITIONS ${COMPILE_DEFS})
